# groupby

./: Cargo.toml  README.md  WRITEUP.md  mksample
src/: grouped_collection.rs  groupers.rs  lib.rs  main.rs  matchers.rs
src/command_line/: args.rs  build_groups.rs  mod.rs  options.rs  output_results.rs  parse_args.rs  process_input.rs  run_command.rs  test_helpers.rs  write_results.rs
src/command_line/command_runner/: handle.rs  mod.rs  report.rs  run.rs
src/command_line/run_command/: child.rs  command.rs  command_handle.rs  command_report.rs  handle.rs  mock_child.rs  mock_command.rs  mock_command_child.rs  mod.rs  record_writer.rs  report.rs  run.rs  run_command.rs  run_command_child.rs  standard_input.rs
src/grouped_collections/: btree_map.rs  fake_map.rs  grouped_collection.rs  hash_map.rs  mod.rs  test_helpers.rs
src/groupers/: mod.rs  string.rs
src/matchers/: mod.rs  string.rs
