[package]
name = "groupby"
version = "0.1.0"
authors = ["Dylan Laufenberg <dylan.laufenberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["cargo"] }
num = "0.4"
regex = "1"
